@@ -2762,6 +2762,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\include\il_utx.h"
+					>
+				</File>
+				<File
 					RelativePath="..\include\il_vtf.h"
 					>
 				</File>
